# lyng2

./: Dockerfile  README.md  deteteDockerImages.py  docker-compose.yaml  docker-compose.yml  makeElm.sh  startServer.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  deleteDockerImages.yml
client/: .gitignore  .prettierrc.json  elm.json  operations.gql  package-lock.json  package.json  tsconfig.json
client/page/: index.html  style.css
client/public/: index.html
client/review/: elm.json
client/review/src/: ReviewConfig.elm
client/src/: App.test.tsx  App.tsx  Editor.test.tsx  Editor.tsx  Interface.elm  Loading.test.tsx  Loading.tsx  LostConnection.test.tsx  LostConnection.tsx  Main.elm  Ron.elm  index.css
client/src/chat/: Chat.test.tsx  Chat.tsx  Register.tsx  Users.test.tsx  Users.tsx  apolloClient.ts  index.tsx
client/src/ron/: common.ts  enum.ts  index.test.ts  index.ts  number.ts  string.ts  tupleStruct.ts
client/src/serverCommunication/: index.test.ts  index.ts
client/tests/: InterfaceTest.elm  RonTest.elm
deleteDockerImages/: deleteDockerImages.py
react-client/: .gitignore  operations.gql  package-lock.json  package.json
react-client/public/: manifest.json
react-client/src/: App.test.tsx  App.tsx  Editor.test.tsx  Editor.tsx  Loading.test.tsx  Loading.tsx  LoadingFailed.test.tsx  LoadingFailed.tsx  LostConnection.test.tsx  LostConnection.tsx  index.css
react-client/src/chat/: Chat.test.tsx  Chat.tsx  Register.tsx  Users.test.tsx  Users.tsx  apolloClient.ts  index.tsx
react-client/src/ron/: common.ts  enum.ts  index.test.ts  index.ts  number.ts  parser.test.ts  parser.ts  string.ts  tupleStruct.ts
react-client/src/serverCommunication/: index.test.ts
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/application/: mod.rs
server/src/ast/: mod.rs
server/src/ast/parser/: error.rs  mod.rs
server/src/ast/parser/tests/: mod.rs
server/src/chat/: auth.rs  mod.rs  test.rs
server/src/chat/repository/: in_memory.rs  mod.rs  surreal_db.rs
server/src/math/: mod.rs
server/src/math/application/: mod.rs
server/src/math/ast/: mod.rs
server/src/math/ast/parser/: error.rs  mod.rs
server/src/math/ast/parser/tests/: mod.rs
tests/: package-lock.json  package.json  playwright.config.ts
tests/tests/: chat.spec.ts  lyng.spec.ts  startPage.spec.ts
tests/tests/fixture/: ChatPage.ts  MainPage.ts  index.ts
