[package]
name = "lyng2"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "5.0.5", features = ["log", "chrono"] }
async-graphql-warp = "5.0.5"
async-trait = "0.1.58"
bigdecimal = "0.3.0"
chrono = "0.4.22"
futures-util = "0.3.24"
jsonwebtoken = "8.1.1"
log = "0.4.17"
ron = "0.8.0"
serde = "1.0.145"
simplelog = "0.12.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
warp = { version = "0.3.2", features = ["tls"] }
parser_combinator = { git = "https://github.com/ekinimo/Kirby", branch = 'main' }

[dev-dependencies]
tokio-test = "0.4.2"
serde_json = "1.0.87"
futures-lite = "1.12.0"